@@ -24,3 +24,8 @@
 2024-07-27 Fred Gleason <fredg@paravelsystems.com>
 	* Modified the '$config_firmware_root' parameter in the configuration
 	to point to the root of the data tree.
+2024-07-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'MountFirmware()' and 'UnmountFirmware()' functions to
+	'common.pl'.
+	* Added a 'mount.pl' command.
+	* Added an 'unmount.pl' command.
